--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,8 +34,8 @@ jobs:
     - name: Create projects directory
       uses: appleboy/ssh-action@master
       with:
-        host: ${{ secrets.HOST_IP }}
-        username: ${{ secrets.HOST_USER }}
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USER }}
         key: ${{ secrets.SSH_KEY }}
         script: |
           sudo rm -rf foodgram/
@@ -44,9 +44,9 @@ jobs:
       uses: garygrossgarten/github-action-scp@release
       with:
           local: infra/
-          remote: /home/${{ secrets.HOST_USER }}/foodgram/
+          remote: /home/${{ secrets.USER }}/foodgram/
           host: ${{ secrets.HOST }}
-          username: ${{ secrets.HOST_USER }}
+          username: ${{ secrets.USER }}
           privateKey: ${{ secrets.SSH_KEY }}
 
   build_push_backend_to_DockerHub:
