--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,7 +63,7 @@ jobs:
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKER_USER }}
-        password: ${{ secrets.DOCKER_PASS }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Push "foodgram/backend" to DockerHub
       uses: docker/build-push-action@v2
