--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,7 @@ jobs:
     - name: Login to Docker
       uses: docker/login-action@v1
       with:
-        username: ${{ secrets.DOCKER_USER }}
+        username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Push "foodgram/backend" to DockerHub
@@ -85,7 +85,7 @@ jobs:
     - name: Login to Docker
       uses: docker/login-action@v1
       with:
-        username: ${{ secrets.DOCKER_USER }}
+        username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Push "foodgram/frontend" to DockerHub
@@ -125,8 +125,8 @@ jobs:
           sudo docker-compose stop
           sudo docker rm foodgram_frontend_1
           sudo docker rm foodgram_backend_1
-          sudo docker rmi ${{ secrets.DOCKER_USER }}/foodgram_front
-          sudo docker rmi ${{ secrets.DOCKER_USER }}/foodgram_back
+          sudo docker rmi ${{ secrets.DOCKER_USERNAME }}/foodgram_front
+          sudo docker rmi ${{ secrets.DOCKER_USERNAME }}/foodgram_back
           sudo docker-compose up -d
   
   send_message:
