--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,7 +70,7 @@ jobs:
       with:
         context: backend/
         push: true
-        tags: ${{ secrets.DOCKER_USER }}/foodgram_back:latest
+        tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
 
   build_push_frontend_to_DockerHub:
     name: Building front image and pushing it to Docker Hub
@@ -93,7 +93,7 @@ jobs:
       with:
         context: frontend/
         push: true
-        tags: ${{ secrets.DOCKER_USER }}/foodgram_front:latest
+        tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_front:latest
 
   deploy:
     runs-on: ubuntu-20.04
