--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -126,7 +126,7 @@ jobs:
           sudo docker rm foodgram_frontend_1
           sudo docker rm foodgram_backend_1
           sudo docker rmi ${{ secrets.DOCKER_USERNAME }}/foodgram_front
-          sudo docker rmi ${{ secrets.DOCKER_USERNAME }}/foodgram_back
+          sudo docker rmi ${{ secrets.DOCKER_USERNAME }}/foodgram_backend
           sudo docker-compose up -d
   
   send_message:
