--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,54 +1,50 @@
 version: '3.3'
-
 services:
-    db:
-        image: postgres:13.0-alpine
-        volumes:
-            - postgres_data:/var/lib/postgresql/data/
-        restart: always
-        env_file:
-            - ./.env
-    
-    frontend:
-        image: k4n1/foodgram:latest
-        command: >
-          bash -c "python manage.py migrate &&
-          python manage.py collectstatic --noinput &&
-          gunicorn --bind 0:8000 foodgram.wsgi"
-        volumes:
-            - ../frontend/:/app/result_build/
-        depends_on:
-            - db
 
-    backend:
-        image: k4n1/foodgram_backend:latest
-        restart: always
-        volumes:
-            - static_value:/code/dj_static/
-            - media_value:/code/dj_media/
-        depends_on:
-            - db
-        env_file:
-            - ./.env
-    
-    nginx:
-        image: nginx:1.19.3
-        ports:
-            - 80:80
-        volumes:
-            - static_value:/code/dj_static/
-            - media_value:/code/dj_media/
-            - ./nginx.conf:/etc/nginx/conf.d/default.conf
-            - ../frontend/build:/usr/share/nginx/html/
-            - ../docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
-            - ../docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
-            #- ../docs/:/usr/share/nginx/html/api/docs/
-        restart: always
+  frontend:
+    image: k4n1/foodgram:latest
+    volumes:
+      - ./frontend/:/app/result_build/
 
-        depends_on:
-            - backend
-            - frontend
+  db:
+    image: postgres:13.0-alpine
+    restart: always
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    env_file:
+      - ./.env
+
+  backend:
+    image: k4n1/foodgram_backend:latest
+    restart: always
+    command: >
+      bash -c "python manage.py migrate &&
+      python manage.py collectstatic --noinput &&
+      gunicorn --bind 0:8000 foodgram.wsgi"
+    volumes:
+      - static_value:/app/static/
+      - media_value:/app/media/
+    depends_on:
+      - db
+    env_file:
+      - ./.env
+
+  nginx:
+    image: nginx:1.19.3
+    restart: always
+    ports:
+      - 80:80
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./frontend/build:/usr/share/nginx/html/
+      - ./docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
+      - ./docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
+    depends_on:
+      - backend
+
 volumes:
-    postgres_data:
-    static_value:
-    media_value:
+  static_value:
+  media_value:
+  postgres_data:
