--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         pip install -r backend/requirements.txt
     - name: Test with flake8
       run: |
-        python -m flake8 backend/
+        python -m flake8 backend/ --ignore=I100,I200
   copy_infra_to_server:
     name: Copy docker-compose.yml and nginx.conf
     runs-on: ubuntu-latest
