--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - ./.env
 
   backend:
-    image: k4n1/foodgram_back:latest
+    image: k4n1/foodgram_backend:latest
     restart: always
     command: >
       bash -c "python manage.py migrate &&
