--- a/.github/workflows/mainl.yml
+++ b/.github/workflows/mainl.yml
@@ -70,7 +70,7 @@ jobs:
       with:
         context: backend/
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_back:latest
+        tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
 
   build_push_frontend_to_DockerHub:
     name: Building front image and pushing it to Docker Hub
@@ -124,9 +124,9 @@ jobs:
           echo DB_PORT=${{ secrets.DB_PORT }} >> .env
           sudo docker-compose stop
           sudo docker rm foodgram_1
-          sudo docker rm foodgram_back_1
+          sudo docker rm foodgram_backend_1
           sudo docker rmi ${{ secrets.DOCKER_USERNAME }}/foodgram
-          sudo docker rmi ${{ secrets.DOCKER_USERNAME }}/foodgram_back
+          sudo docker rmi ${{ secrets.DOCKER_USERNAME }}/foodgram_backend
           sudo docker-compose up -d
   
   send_message:
